Broken tests are fixed.